# iceberg-compaction

./: Cargo.toml  LEARNING_AND_ARCHITECTURE.md  PROJECT_SPECIFICATION.md  README.md  TECHNICAL_DEEP_DIVE.md  dhat-heap.json
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  file_group.rs  lib.rs  metrics.rs  retry.rs  storage.rs
crates/planner/: Cargo.toml
crates/planner/examples/: data_generator.rs  local_compaction.rs
crates/planner/src/: commit.rs  file_selection.rs  lib.rs  metadata.rs  packer.rs  table_provider.rs  task_builder.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: compaction.proto
crates/proto/src/: lib.rs  task.rs
crates/worker/: Cargo.toml
crates/worker/examples/: compact_poc.rs
crates/worker/src/: executor.rs  grpc_client.rs  grpc_server.rs  health.rs  lib.rs  writer.rs
crates/worker/src/datafusion/: file_scan.rs  logical_plan_sketch.rs  mod.rs  sql_builder.rs
crates/worker/tests/: logical_plan_minio.rs
scripts/: e2e_minio_dhat.sh
