[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/proto",
    "crates/planner",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Local workspace members
compaction-common = { path = "./crates/common" }
compaction-proto = { path = "./crates/proto" }
compaction-planner = { path = "./crates/planner" }
compaction-worker = { path = "./crates/worker" }

# Async runtime and utilities
async-stream = "0.3.5"
async-trait = "0.1.89"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }

# Data processing
datafusion = "50"
iceberg = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "54498bc5189b8d1f68419b53ba2d0288ce375a87", features = [
    "storage-s3",
    "storage-gcs",
    "storage-azblob",
    "storage-azdls",
] }
iceberg-catalog-rest = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "54498bc5189b8d1f68419b53ba2d0288ce375a87" }
iceberg-datafusion = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "54498bc5189b8d1f68419b53ba2d0288ce375a87" }
parquet = { version = "56.2", features = ["async"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.11"
anyhow = "1.0"

# Storage abstraction
opendal = { version = "0.53", features = ["services-s3", "services-gcs", "services-azblob", "services-fs"] }
object_store = { version = "0.12", features = ["aws"] }
url = "2.5"

# Utilities
arrow = "56.2"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
itertools = "0.13.0"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v7", "serde"] }

# Benchmarking and profiling
sysinfo = "0.32"
memory-stats = "1.2"

# gRPC (for distributed communication)
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

[workspace.lints.clippy]
uninlined_format_args = "allow"
dbg_macro = "warn"
