[package]
name = "compaction-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Iceberg types
iceberg = { workspace = true }

# Storage abstraction
opendal = { workspace = true }

# Utilities
derive_builder = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
