[package]
name = "compaction-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compaction-common = { workspace = true }
compaction-proto = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Iceberg
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }

# gRPC server
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
