[package]
name = "compaction-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compaction-common = { workspace = true }
compaction-proto = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Iceberg
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }

# gRPC server
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
compaction-worker = { workspace = true }
tracing-subscriber = { workspace = true }
opendal = { workspace = true }
url = { workspace = true }

# For data generator example
arrow = { workspace = true }
parquet = { workspace = true }
bytes = { workspace = true }

# Memory profiling
dhat = "0.3"

[features]
dhat-heap = []

[[example]]
name = "local_compaction"
path = "examples/local_compaction.rs"

[[example]]
name = "data_generator"
path = "examples/data_generator.rs"

[lints]
workspace = true
