[package]
name = "compaction-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compaction-common = { workspace = true }
compaction-proto = { workspace = true }

# Async
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Data processing
arrow = { workspace = true }
datafusion = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
parquet = { workspace = true }

# Storage
bytes = { workspace = true }
opendal = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }

# gRPC client
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Memory allocator (critical for large Parquet row groups)
tikv-jemallocator = "0.6"

[dev-dependencies]
opendal = { workspace = true }
tempfile = { workspace = true }
sysinfo = { workspace = true }
memory-stats = { workspace = true }
tikv-jemallocator = "0.6"

[[example]]
name = "compact_poc"
path = "examples/compact_poc.rs"

[lints]
workspace = true
